--- a/Mathematics/LightAndOpticalSystems/light-and-optical-systems.ipynb
+++ b/Mathematics/LightAndOpticalSystems/light-and-optical-systems.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
        "\n",
        "<div>\n",
        "    <img src=\"images/iris.jpg\" width=720px style=\"margin-left:auto; margin-right:auto\">\n",
-       "    <div style=\"position: absolute; top: 10%; left: 26%; color: #ffffcc; font-size: 24pt; text-align: center; text-shadow: 2px 2px 4px #000000;\">\n",
+       "    <div style=\"position: absolute; top: 8%; left: 24%; color: #b3cce6; font-size: 24pt; text-align: center; text-shadow: 2px 2px 4px #000000; padding: 20px; background-color: rgb(0,0,0,0.5); border-radius: 10px;\">\n",
        "        The Science of Image Formation and Vision\n",
        "    </div>\n",
        "</div>"
@@ -51,7 +51,7 @@
     "\n",
     "<div>\n",
     "    <img src=\"images/iris.jpg\" width=720px style=\"margin-left:auto; margin-right:auto\">\n",
-    "    <div style=\"position: absolute; top: 10%; left: 26%; color: #ffffcc; font-size: 24pt; text-align: center; text-shadow: 2px 2px 4px #000000;\">\n",
+    "    <div style=\"position: absolute; top: 8%; left: 24%; color: #b3cce6; font-size: 24pt; text-align: center; text-shadow: 2px 2px 4px #000000; padding: 20px; background-color: rgb(0,0,0,0.5); border-radius: 10px;\">\n",
     "        The Science of Image Formation and Vision\n",
     "    </div>\n",
     "</div>"
