separate out some helper code and start getting into scraping based on classes

--- a/Technology/WebScraping/web-scraping.ipynb
+++ b/Technology/WebScraping/web-scraping.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# !pip install --user scrapy"
@@ -11,10 +13,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
+    "from notebook_code.scraping_support import *\n",
+    "\n",
     "from scrapy.selector import Selector\n",
     "from scrapy.http import HtmlResponse\n",
     "\n",
@@ -96,8 +102,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -108,7 +116,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,35 +137,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## TODO: Put this in a helper file:\n",
-    "\n",
-    "from html.parser import HTMLParser\n",
-    "\n",
-    "class TagRemover(HTMLParser):\n",
-    "    def __init__(self):\n",
-    "        self.reset()\n",
-    "        self.strict = False\n",
-    "        self.convert_charrefs= True\n",
-    "        self.fed = []\n",
-    "    def handle_data(self, d):\n",
-    "        self.fed.append(d)\n",
-    "    def get_data(self):\n",
-    "        return ''.join(self.fed)\n",
-    "\n",
-    "def remove_tags(html):\n",
-    "    s = TagRemover()\n",
-    "    s.feed(html)\n",
-    "    return s.get_data()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -165,7 +148,7 @@
        "'42'"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,8 +172,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -198,7 +183,7 @@
        "'42'"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,8 +213,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -243,7 +230,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,8 +255,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -277,7 +266,7 @@
        "['42', '2', 'foo']"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,8 +284,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -312,7 +303,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,8 +328,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -346,7 +339,7 @@
        "['42', '2', 'foo']"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,15 +357,272 @@
     "1. `//` and `/`\n",
     "2. `b`\n",
     "3. `text()`\n",
-    "\n"
+    "\n",
+    "Let's talk about parts 2 and 3 first. Those are pretty straightforward. `b` is just the name of the tag, without needing to put in any of the `<>`. `text()` is a special xpath function that tells it to strip out any other HTML tags within the `<b></b>` (if there are any) and just get the text. That means that we'd get the same results from `<b>42</b>` as we'd get from `<b><i>42</i></b>`.\n",
+    "\n",
+    "`//` and `/` both mean to look within the current tag's children. If nothing is on the left, the \"current tag\" is the root of the document. The difference is that while `/` expects the tag on the right to be a direct child of the tag on the left, `//` will keep checking the children of children, retreiving anything that matches. Neither is better than the other. In fact, you'll likely need to play around a bit with them to find the right combination that is *specific enough* to not return a bunch of results you aren't interested in, but *general enough* that if someone made a small change to the website you're scraping, your scraper wouldn't break.\n",
+    "\n",
+    "Without any `//` you'd have to write out the exact path to get the same answer as above. Try it!:"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['42', '2', 'foo']"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Selector(text=html_text).xpath('/html/body/div/b/text()').extract()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now try taking out one of those tags (we'll take out the `div` tag:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Selector(text=html_text).xpath('/html/body/b/text()').extract()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Where could you add a single `//` to the above xpath string to get those results back?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['42', '2', 'foo']"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Selector(text=html_text).xpath('/html/body//b/text()').extract()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This means your `<b></b>` tags around the answers can be anywhere inside `<html><body></body></html>`, but not outside of it. If the `<div>` tag was replaced with `<p>` (for 'paragraph') or any other tag, your scraper would still work. If the answers were put another level deeper, the scraper would still find them."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Using HTML attributes\n",
+    "\n",
+    "In addition to childern, any HTML tag can have a number of attributes. Here's what they look like:\n",
+    "\n",
+    "```html\n",
+    "<some_tag attribute_1='value_1' attribute_2='value_2'>\n",
+    "  ...\n",
+    "</some_tag>\n",
+    "```\n",
+    "\n",
+    "One attribute that has special meaning and is used frequently is `class`. `class` is used to tell the browser to use certain CSS style information when drawing the tag and its children. A tag can have many classes, each separated by a space. For example:\n",
+    "\n",
+    "```html\n",
+    "<some_tag class='class_1 class_2 class_3'>\n",
+    "  ...\n",
+    "</some_tag>\n",
+    "```\n",
+    "\n",
+    "We're not going to get into how CSS works here, though. What's important for our scraper is that these classes are used a lot and often have names that are related to the kind of information they contain. This isn't a rule. They can really be anything you want. But the reason people will often use the type of information as a class name is that they don't want to have to think about the structure of the page and where that tag is just to change some small part of its appearance (its color, for example). And because of this, they can help us make our scrapers more specific and less fragile.\n",
+    "\n",
+    "Let's go back to our sample HTML and change it a bit:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<div>\n",
+       "    Answer to Question 1: <b class='answer'>42</b><br/>\n",
+       "    Answer to Question 2: <b class='answer'>2</b><br/>\n",
+       "    Answer to Question 3: <b class='answer'>foo</b><br/>\n",
+       "    This isn't an answer to anything: <b>Just a little bold text!</b>\n",
+       "</div>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "html_text = '''\n",
+    "<div>\n",
+    "    Answer to Question 1: <b class='answer'>42</b><br/>\n",
+    "    Answer to Question 2: <b class='answer'>2</b><br/>\n",
+    "    Answer to Question 3: <b class='answer'>foo</b><br/>\n",
+    "    This isn't an answer to anything: <b>Just a little bold text!</b>\n",
+    "</div>\n",
+    "'''\n",
+    "HTML(html_text)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What happens if we run the same scraping code we did above on this?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['42', '2', 'foo', 'Just a little bold text!']"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Selector(text=html_text).xpath('//b/text()').extract()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Aha! We still get our answers, but we also get something we don't want, just because it happens to be within a `<b></b>` tag. Let's add knowledge of the 'answer' class to our scraper so it just picks up the right pieces:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['42', '2', 'foo']"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xpath_string = '//b[contains(concat(\" \", normalize-space(@class), \" \"),\" answer \")]/text()'\n",
+    "Selector(text=html_text).xpath(xpath_string).extract()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "That's a little complicated. It's handling the possibility that one or more of the `<b>` tags may have *multiple* classes, and it's making sure to not match class names that just contain 'answer' (such as 'not_an_answer'). This is where scrapy's `css` function and the ability to chain your scraping calls comes in handy.\n",
+    "\n",
+    "Thinking about it another way, we could ask to find all the `<b></b>` tags, then just find the tags within that set that have the class `answer`, then find the text underneath:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['42', '2', 'foo']"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Selector(text=html_text).xpath('//b').css('.answer').xpath('text()').extract()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:ds]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-ds-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -384,7 +634,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.5.4"
   }
  },
  "nbformat": 4,
