--- a/Technology/issues-related-to-thermal-technologies.ipynb
+++ b/Technology/issues-related-to-thermal-technologies.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -31,13 +31,13 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from IPython.display import display, Math, Latex, HTML, clear_output, Markdown\n",
+    "from IPython.display import display, Math, Latex, HTML, clear_output, Markdown, IFrame\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import ipywidgets as widgets\n",
@@ -78,6 +78,69 @@
    "source": [
     "## Introduction\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Types of Thermal Energy\n",
+    "\n",
+    "- Atomic\n",
+    "- Biofuel/Biomass\n",
+    "- Coal\n",
+    "- Fusion/Fission/Nuclear\n",
+    "- Combustion\n",
+    "- Geothermal\n",
+    "- MHD\n",
+    "- Natural Gas\n",
+    "- Oil\n",
+    "- Piezoelectricity\n",
+    "- Renewable\n",
+    "- Solar\n",
+    "- Wood\n",
+    "- Thermo-electric\n",
+    "- Thermal Power Station"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"750\"\n",
+       "            height=\"470\"\n",
+       "            src=\"index.html\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7f78957a3b38>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "IFrame(\"index.html\",width = 750,height = 470)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
