Added slideshow in a cell

--- a/Technology/issues-related-to-thermal-technologies.ipynb
+++ b/Technology/issues-related-to-thermal-technologies.ipynb
@@ -83,28 +83,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Types of Thermal Energy\n",
-    "\n",
-    "- Atomic\n",
-    "- Biofuel/Biomass\n",
-    "- Coal\n",
-    "- Fusion/Fission/Nuclear\n",
-    "- Combustion\n",
-    "- Geothermal\n",
-    "- MHD\n",
-    "- Natural Gas\n",
-    "- Oil\n",
-    "- Piezoelectricity\n",
-    "- Renewable\n",
-    "- Solar\n",
-    "- Wood\n",
-    "- Thermo-electric\n",
-    "- Thermal Power Station"
+    "## Types of Thermal Energy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {
     "scrolled": false
    },
@@ -115,7 +99,7 @@
        "\n",
        "        <iframe\n",
        "            width=\"750\"\n",
-       "            height=\"470\"\n",
+       "            height=\"600\"\n",
        "            src=\"index.html\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
@@ -123,24 +107,31 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f78957a3b38>"
+       "<IPython.lib.display.IFrame at 0x7f095db79cc0>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "IFrame(\"index.html\",width = 750,height = 470)"
+    "IFrame(\"index.html\",width = 750,height = 600)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "nuclear - http://www.hcs.harvard.edu/~res/2015/05/spring-15-feature-issue-future-of-nuclear-energy/\n",
+    "biofuel - https://ec.europa.eu/jrc/en/news/technology-key-ensuring-sustainable-bioenergy-and-biofuel-production\n",
+    "geothermal - https://difweb.org/geothermal-energy-is-getting-hot/\n",
+    "solar - https://www.extremetech.com/extreme/188328-californias-new-solar-power-plant-is-actually-a-death-ray-thats-incinerating-birds-mid-flight\n",
+    "\n",
+    "Coal - http://www.energytrendsinsider.com/research/coal/coal-mining-and-processing/\n",
+    "oil - https://www.cannonoperating.com/educational/5-things-know-investing-oil-well/\n",
+    "natural gas - https://energyathaas.wordpress.com/2018/02/05/how-much-do-residential-consumers-respond-to-the-price-of-natural-gas/"
+   ]
   }
  ],
  "metadata": {
