--- a/Technology/issues-related-to-thermal-technologies.ipynb
+++ b/Technology/issues-related-to-thermal-technologies.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,12 +83,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Types of Thermal Energy"
+    "## Types of Thermal Energy\n",
+    "\n",
+    "Click on the \"Next\" button to browse through the different types of thermal energy sources."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {
     "scrolled": false
    },
@@ -96,27 +98,19 @@
     {
      "data": {
       "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"750\"\n",
-       "            height=\"600\"\n",
-       "            src=\"index.html\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "        ></iframe>\n",
-       "        "
+       "<iframe src = \"index.html\" width = \"750px\" height = \"600px\" frameBorder=\"0\"></iframe>"
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f095db79cc0>"
+       "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 14,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "IFrame(\"index.html\",width = 750,height = 600)"
+    "%%html\n",
+    "<iframe src = \"index.html\" width = \"750px\" height = \"600px\" frameBorder=\"0\"></iframe>"
    ]
   },
   {
