--- a/Technology/issues-related-to-thermal-technologies.ipynb
+++ b/Technology/issues-related-to-thermal-technologies.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {
     "scrolled": false
    },
@@ -98,7 +98,7 @@
     {
      "data": {
       "text/html": [
-       "<iframe src = \"index.html\" width = \"750px\" height = \"600px\" frameBorder=\"0\"></iframe>"
+       "<center><iframe src = \"index.html\" width = \"750px\" height = \"600px\" frameBorder=\"0\"></iframe></center>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -110,7 +110,7 @@
    ],
    "source": [
     "%%html\n",
-    "<iframe src = \"index.html\" width = \"750px\" height = \"600px\" frameBorder=\"0\"></iframe>"
+    "<center><iframe src = \"index.html\" width = \"750px\" height = \"600px\" frameBorder=\"0\"></iframe></center>"
    ]
   },
   {
