--- a/Technology/issues-related-to-thermal-technologies.ipynb
+++ b/Technology/issues-related-to-thermal-technologies.ipynb
@@ -1,9 +1,33 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src = \"https://callysto.ca/wp-content/uploads/2018/06/Callysto_Notebook-Banner_Top_06.06.18.jpg\">"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython.display import display, Math, Latex, HTML, clear_output, Markdown, IFrame\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import ipywidgets as widgets\n",
+    "from ipywidgets import interact, interactive\n",
+    "\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -31,28 +55,13 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 1,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "from IPython.display import display, Math, Latex, HTML, clear_output, Markdown, IFrame\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import ipywidgets as widgets\n",
-    "from ipywidgets import interact, interactive\n",
-    "\n",
-    "%matplotlib inline\n",
-    "\n",
-    "\n",
-    "'''Above, we are importing all the necessary modules in order to run the notebook. \n",
-    "Numpy allows us to define arrays of values for our variables to plot them\n",
-    "matplotlib is what we use to create the figures\n",
-    "the display and widgets are to make the notebook look neat\n",
-    "'''\n",
-    "\n",
-    "HTML('''<script>\n",
+    "%%html\n",
+    "<script>\n",
     "  function code_toggle() {\n",
     "    if (code_shown){\n",
     "      $('div.input').hide('500');\n",
@@ -69,7 +78,7 @@
     "    $('div.input').hide()\n",
     "  });\n",
     "</script>\n",
-    "<form action=\"javascript:code_toggle()\"><input type=\"submit\" id=\"toggleButton\" value=\"Show Code\"></form>''')"
+    "<form action=\"javascript:code_toggle()\"><input type=\"submit\" id=\"toggleButton\" value=\"Show Code\"></form>"
    ]
   },
   {
@@ -90,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
@@ -117,6 +126,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Positive & Negative Impacts of Energy Use\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## References\n",
+    "\n",
+    "\n",
     "nuclear - http://www.hcs.harvard.edu/~res/2015/05/spring-15-feature-issue-future-of-nuclear-energy/\n",
     "biofuel - https://ec.europa.eu/jrc/en/news/technology-key-ensuring-sustainable-bioenergy-and-biofuel-production\n",
     "geothermal - https://difweb.org/geothermal-energy-is-getting-hot/\n",
@@ -125,6 +145,13 @@
     "Coal - http://www.energytrendsinsider.com/research/coal/coal-mining-and-processing/\n",
     "oil - https://www.cannonoperating.com/educational/5-things-know-investing-oil-well/\n",
     "natural gas - https://energyathaas.wordpress.com/2018/02/05/how-much-do-residential-consumers-respond-to-the-price-of-natural-gas/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src = \"https://callysto.ca/wp-content/uploads/2018/07/Callysto-Notebook-Banner_Bottom_07.30.18.jpg\">"
    ]
   },
   {
